<resources>
    <string name="app_name">My Movies Catalog</string>
    <string name="edit_movie_header">Edit Movie</string>
    <string name="edit_movie_contextmenu">Edit</string>
    <string name="delete_movie_contextMenu">Delete</string>
    <string name="optionsMenu">Options</string>
    <string name="manual_add_movie">Add manually</string>
    <string name="internet_add_movie">Add from Internet</string>
    <string name="exit_option">Quit</string>
    <string name="movie_subject">Subject:</string>
    <string name="movie_body">Body:</string>
    <string name="movie_url">URL:</string>
    <string name="btn_Show">Show</string>
    <string name="btn_confirm">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="search">Search:</string>
    <string name="btn_go">Go</string>
    <string name="msg_loading_local_movies">Loading local movies</string>
    <string name="msg_finished_loading_movies">Finished loading movies list</string>
    <string name="movie_title">Title</string>
    <string name="movie_not_found">No movie was found!</string>
    <string name="movie_saved">Movie %s was saved</string>
    <string name="dialog_add_movie">Add Movie</string>
    <string name="toast_message_noMovieName">Please enter movie title</string>
    <string name="toast_message_noPlot">Please insert movie plot</string>
    <string name="btn_update">Update</string>
    <string name="menu_option_exit">Exit</string>
    <string name="menu_delete_all_movies">Delete all movies</string>
    <string name="menu_context_option_edit_movie">Edit movie</string>
    <string name="menu_context_option_delete_movie">Delete movie</string>
    <string name="title_activity_web_search">WebSearchActivity</string>
    <string name="btn_Add">Add Movie</string>
    <string name="toast_message_invalid_url">The poster URL is invalid. Please fix!</string>
    <string name="toast_message_catalog_deleted">Movie catalog has been deleted!</string>
    <string name="toast_message_deleted_sucessfully">was deleted successfully!</string>
    <string name="toast_message_movie_delete_failed">was not deleted. Please try again!</string>
    <string name="txt_movie">Movie</string>
    <string name="menu_context_option_item_share"><![CDATA[Share & Enjoy]]></string>
    <string name="menu_share">Share</string>
    <string name="menu_option_clear_all_fields">Clear all fields</string>
    <string name="toast_message_Loading_Image">Loading image&#8230;</string>
    <string name="toast_message_image_not_found">No image was found in this link!</string>
    <string name="dialog_header_delete_all_catalog">Delete movies catalog</string>
    <string name="dialog_message_delete_catalog_warning">Warning! This action will delete all the movies in your catalog. This action is ireversible. Are you sure you want to continue?</string>
    <string name="dialog_button_delete_complete_catalog">Delete complete catalog</string>
    <string name="dialog_button_delete_catalog_cancel">Cancel</string>
    <string name="app_bar_search">search movie</string>
    <string name="dialog_add_movie_message">How do you want to add the movie?</string>
    <string name="menu_option_generate_dummy_data">Generate dummy data</string>
    <string name="menu_option_share_intent_text">Share movie through</string>
</resources>
